--- a/GK2_TrianglesFiller/packages.config
+++ b/GK2_TrianglesFiller/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net48" />
+  <package id="Extended.Wpf.Toolkit" version="3.6.0" targetFramework="net48" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net48" />
   <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net48" />
   <package id="MathNet.Numerics" version="4.7.0" targetFramework="net48" />
