--- a/GK2_TrianglesFiller/packages.config
+++ b/GK2_TrianglesFiller/packages.config
@@ -7,4 +7,5 @@
   <package id="MathNet.Numerics" version="4.7.0" targetFramework="net48" />
   <package id="MathNet.Spatial" version="0.5.0" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.3" targetFramework="net48" />
+  <package id="WriteableBitmapEx" version="1.6.3" targetFramework="net48" />
 </packages>
